[package]
name = "nscn-match-maker"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async lib
tokio = { version = "1", features = ["full"] }
tokio-graceful-shutdown = "0.12"

# http server
axum = { version = "0.6", features = [] }

# lazy static
once_cell = "1"

# config reader
dotenvy = "0.15"

# logging / cli print
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"

# error handling
anyhow = "1"

# JSON encode / decode
serde_json = "1"
serde = "1"

# uncategory
docker-api = "0.12"
mimalloc = { version = "*", default-features = false }
dashmap = "5.4.0"